--- a/Silverlight.Netsy.TestControl/Shop/ShopView.xaml
+++ b/Silverlight.Netsy.TestControl/Shop/ShopView.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="Silverlight.Netsy.TestControl.ShopView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    Width="400" Height="300">
+    DataContext="{Binding Path=ShopViewModel, Source={StaticResource ViewModelLocator}}">
     <Grid x:Name="LayoutRoot" Background="White">
 
     </Grid>
