--- a/NetsyGui/App.xaml
+++ b/NetsyGui/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="NetsyGui.App"
+﻿<Application x:Class="NetsyGui.NetsyApp"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     StartupUri="MainWindow.xaml">
