--- a/NetsyGui/MainWindow.xaml
+++ b/NetsyGui/MainWindow.xaml
@@ -1,21 +1,26 @@
 ﻿<Window x:Class="NetsyGui.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Netsy Gui" Height="500" Width="500">
+    Title="Netsy Gui" Height="600" Width="600">
     <DockPanel>
         <StackPanel DockPanel.Dock="Top">
             <Button Content="Reload" x:Name="reload" Click="ReloadClick" />
         </StackPanel>
         <Grid>
-            <ListBox ItemsSource="{Binding Listings}">  
+            <ListBox ItemsSource="{Binding Listings}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <UniformGrid Columns="3"/>
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Vertical" Margin="5,0,0,5">
-                        <TextBlock FontWeight="Bold" Text="{Binding Title}"></TextBlock>
-                        <Image Source="{Binding ThumbnailImageUrl}" HorizontalAlignment="Left"></Image> 
-                        <TextBlock Text="{Binding PriceData}"></TextBlock>
-                    </StackPanel>
-                </DataTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Vertical" Margin="2,2,2,2">
+                            <TextBlock FontWeight="Bold" Text="{Binding Title}" TextWrapping="Wrap"></TextBlock>
+                            <Image Source="{Binding ThumbnailImageUrl}" HorizontalAlignment="Left" Stretch="None"></Image>
+                            <TextBlock Text="{Binding PriceData}" TextWrapping="Wrap"></TextBlock>
+                        </StackPanel>
+                    </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
