--- a/NetsyGui/Main/MainWindow.xaml
+++ b/NetsyGui/Main/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="NetsyGui.MainWindow"
+﻿<Window x:Class="NetsyGui.Main.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ValueConverters="clr-namespace:NetsyGui.ValueConverters"
@@ -13,17 +13,17 @@
 
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
-            <Button Content="Reload" x:Name="reloadButton" Click="ReloadClick" />
-            <Button Content="First" x:Name="firstButton" Click="FirstClick" />
-            <Button Content="Previous" x:Name="previousButton" Click="PreviousClick" />
-            <Button Content="Next" x:Name="nextButton" Click="NextClick" />
+            <Button Content="Reload" Command="{x:Static NetsyGui:CommandLocator.MainWindowReloadCommand}" CommandParameter="{Binding}" />
+            <Button Content="First" Command="{x:Static NetsyGui:CommandLocator.MainWindowFirstPageCommand}" CommandParameter="{Binding}" />
+            <Button Content="Previous" Command="{x:Static NetsyGui:CommandLocator.MainWindowPreviousPageCommand}" CommandParameter="{Binding}" />
+            <Button Content="Next" Command="{x:Static NetsyGui:CommandLocator.MainWindowNextPageCommand}" CommandParameter="{Binding}" />
         </StackPanel>
         <StatusBar DockPanel.Dock="Bottom">
             <StatusBarItem>
                 <Label 
                     DockPanel.Dock="Left"
                     VerticalAlignment="Center" 
-                    Content="Etsy gui" />
+                    Content="{Binding StatusText}" />
             </StatusBarItem>
         </StatusBar>
         <Grid>
