--- a/NetsyGui/Main/MainWindow.xaml
+++ b/NetsyGui/Main/MainWindow.xaml
@@ -27,7 +27,9 @@
             </StatusBarItem>
         </StatusBar>
         <Grid>
-            <ListBox ItemsSource="{Binding Listings}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+            <ListBox 
+                ItemsSource="{Binding Listings}" 
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
                         <UniformGrid Columns="{Binding ElementName=mainWindow, Path=ActualWidth, Converter={StaticResource WidthToColumnCountValueConverter}}"/>
@@ -42,8 +44,7 @@
                                 <TextBlock DockPanel.Dock="Left" Text="{Binding PriceData}" ></TextBlock>
                                 <TextBlock DockPanel.Dock="Right" TextAlignment="Right" Text="{Binding Quantity}" ></TextBlock>
                             </DockPanel>
-                            <TextBlock Text="{Binding UserName}" TextWrapping="Wrap"></TextBlock>
-                            <TextBlock><Hyperlink><TextBlock Text="{Binding UserName}" /></Hyperlink></TextBlock>
+                            <TextBlock><Hyperlink Command="{x:Static NetsyGui:CommandLocator.ShowUserCommand}" CommandParameter="{Binding}"><TextBlock Text="{Binding UserName}" /></Hyperlink></TextBlock>
                             <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap"></TextBlock>
                         </StackPanel>
                     </DataTemplate>
