--- a/NetsyGui/Main/MainWindow.xaml
+++ b/NetsyGui/Main/MainWindow.xaml
@@ -1,19 +1,15 @@
 ﻿<Window x:Class="NetsyGui.Main.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:ValueConverters="clr-namespace:NetsyGui.ValueConverters"
     xmlns:NetsyGui="clr-namespace:NetsyGui"
+    xmlns:Controls="clr-namespace:NetsyGui.Controls"
     Title="Netsy Gui" 
     Height="600" Width="600"
     x:Name="mainWindow"
     DataContext="{x:Static NetsyGui:Locator.MainWindowViewModel}">
-    <Window.Resources>
-        <ValueConverters:WidthToColumnCountValueConverter x:Key="WidthToColumnCountValueConverter" />
-    </Window.Resources>
-
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
-            <Button Content="Reload" Command="{x:Static NetsyGui:CommandLocator.MainWindowLoadFrontFeaturedListingsCommand}" CommandParameter="{Binding}" />
+            <Button Content="Reload Front Listings" Command="{x:Static NetsyGui:CommandLocator.MainWindowLoadFrontFeaturedListingsCommand}" CommandParameter="{Binding}" />
             <Button Content="First" Command="{x:Static NetsyGui:CommandLocator.MainWindowFirstPageCommand}" CommandParameter="{Binding}" />
             <Button Content="Previous" Command="{x:Static NetsyGui:CommandLocator.MainWindowPreviousPageCommand}" CommandParameter="{Binding}" />
             <Button Content="Next" Command="{x:Static NetsyGui:CommandLocator.MainWindowNextPageCommand}" CommandParameter="{Binding}" />
@@ -27,29 +23,7 @@
             </StatusBarItem>
         </StatusBar>
         <Grid>
-            <ListBox 
-                ItemsSource="{Binding Listings}" 
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <UniformGrid Columns="{Binding ElementName=mainWindow, Path=ActualWidth, Converter={StaticResource WidthToColumnCountValueConverter}}"/>
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Vertical" Margin="2,2,2,2">
-                            <TextBlock FontWeight="Bold" Text="{Binding Title}" TextWrapping="Wrap"></TextBlock>
-                            <Image Source="{Binding ThumbnailImageUrl}" HorizontalAlignment="Left" Stretch="None"></Image>
-                            <DockPanel>
-                                <TextBlock DockPanel.Dock="Left" Text="{Binding PriceData}" ></TextBlock>
-                                <TextBlock DockPanel.Dock="Right" TextAlignment="Right" Text="{Binding Quantity}" ></TextBlock>
-                            </DockPanel>
-                            <TextBlock><Hyperlink Command="{x:Static NetsyGui:CommandLocator.ShowUserCommand}" CommandParameter="{Binding}"><TextBlock Text="{Binding UserName}" /></Hyperlink></TextBlock>
-                            <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap"></TextBlock>
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+            <Controls:Listings DataContext="{Binding Listings}" />
         </Grid>
     </DockPanel>
 </Window>
