--- a/NetsyGui/Shop/ShopWindow.xaml
+++ b/NetsyGui/Shop/ShopWindow.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:NetsyGui="clr-namespace:NetsyGui"
+    xmlns:Controls="clr-namespace:NetsyGui.Controls"
     Title="{Binding Shop.Name}" 
     Width="800"
     Height="500"
@@ -21,6 +22,7 @@
             <TextBlock FontWeight="Bold" Text="{Binding Shop.SaleMessage}" TextWrapping="Wrap"></TextBlock>
             <TextBlock FontWeight="Bold" Text="{Binding Shop.Announcement}" TextWrapping="Wrap"></TextBlock>
             <TextBlock FontWeight="Bold" Text="{Binding Shop.PolicyWelcome}" TextWrapping="Wrap"></TextBlock>
+            <Controls:Listings DataContext="{Binding Listings}" />
         </StackPanel>
     </DockPanel>
 </Window>
