--- a/Netsy.WpfUI/App.xaml
+++ b/Netsy.WpfUI/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Netsy.WpfUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    StartupUri="MainWindow.xaml">
+    StartupUri="Windows\Main\MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
