--- a/Netsy.WpfUI/Controls/ListingSmall.xaml
+++ b/Netsy.WpfUI/Controls/ListingSmall.xaml
@@ -2,13 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <StackPanel Orientation="Vertical" Margin="2,2,2,2">
-        <TextBlock FontWeight="Bold" Text="{Binding Title}" TextWrapping="Wrap"></TextBlock>
-        <Image Source="{Binding ThumbnailImageUrl}" HorizontalAlignment="Left" Stretch="None"></Image>
+        <TextBlock FontWeight="Bold" Text="{Binding Listing.Title}" TextWrapping="Wrap"></TextBlock>
+        <Image Source="{Binding Listing.ImageUrl155X125}" HorizontalAlignment="Left" Stretch="None"></Image>
         <DockPanel>
             <TextBlock DockPanel.Dock="Left" Text="{Binding PriceData}" ></TextBlock>
-            <TextBlock DockPanel.Dock="Right" TextAlignment="Right" Text="{Binding Quantity}" ></TextBlock>
+            <TextBlock DockPanel.Dock="Right" TextAlignment="Right" Text="{Binding Listing.Quantity}" ></TextBlock>
         </DockPanel>
-        <TextBlock><Hyperlink CommandParameter="{Binding}"><TextBlock Text="{Binding UserName}" /></Hyperlink></TextBlock>
+        <TextBlock><Hyperlink CommandParameter="{Binding}"><TextBlock Text="{Binding Listing.UserName}" /></Hyperlink></TextBlock>
         <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap"></TextBlock>
     </StackPanel>
 </UserControl>
