--- a/Netsy.WpfUI/Controls/ColorKeywordListings.xaml
+++ b/Netsy.WpfUI/Controls/ColorKeywordListings.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Netsy.WpfUI.Controls.FrontListings"
+﻿<UserControl x:Class="Netsy.WpfUI.Controls.ColorKeywordListings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:Netsy.WpfUI.Controls">
@@ -14,6 +14,10 @@
             <Button Content="First" Margin="0,0,1,0" Command="{Binding FirstPageCommand}" CommandParameter="{Binding}" />
             <Button Content="Previous" Margin="0,0,1,0" Command="{Binding PreviousPageCommand}" CommandParameter="{Binding}" />
             <Button Content="Next" Margin="0" Command="{Binding NextPageCommand}" CommandParameter="{Binding}" />
+            <Label Content="Keywords:" Margin="6,0,0,2" />
+            <TextBox MinWidth="100" MaxWidth="200" Text="{Binding Path=Keywords, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Content="Color:" Margin="6,0,0,2" />
+            <TextBox MinWidth="100" MaxWidth="200" Text="{Binding Path=ColorText, UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
 
         <Controls:Listings Grid.Row="1" DataContext="{Binding Items}" />
