--- a/Netsy.WpfUI/Windows/Main/MainWindow.xaml
+++ b/Netsy.WpfUI/Windows/Main/MainWindow.xaml
@@ -2,14 +2,17 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:Netsy.WpfUI.Controls"
-    Title="Netsy" Height="400" Width="500">
+    Title="Netsy" Height="400" Width="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <TabControl>
-            <TabItem Header="_Front Items">
+            <TabItem Header="_Front Listings">
                 <Controls:FrontListings  DataContext="{Binding FrontFeaturedListings}" />
+            </TabItem>
+            <TabItem Header="Listings by color and _keyword">
+                <Controls:ColorKeywordListings  DataContext="{Binding ColorKeywordsViewModel}" />
             </TabItem>
             <TabItem Header="_Other stuff">
             </TabItem>
