--- a/Netsy.WpfUI/Windows/Main/MainWindow.xaml
+++ b/Netsy.WpfUI/Windows/Main/MainWindow.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:Netsy.WpfUI.Controls"
-    Title="Netsy" Height="400" Width="600">
+    Title="Netsy" Height="400" Width="750">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -19,6 +19,12 @@
             </TabItem>
             <TabItem Header="Listings by color _and keyword">
                 <Controls:ColorKeywordListings  DataContext="{Binding ColorKeywordsViewModel}" />
+            </TabItem>
+            <TabItem Header="Listings by _materials">
+                <Controls:MaterialsListings  DataContext="{Binding MaterialsViewModel}" />
+            </TabItem>
+            <TabItem Header="Listings by _tags">
+                <Controls:TagsListings  DataContext="{Binding TagsViewModel}" />
             </TabItem>
         </TabControl>
     </Grid>
