--- a/Netsy.WpfUI/Windows/Shop/ShopWindow.xaml
+++ b/Netsy.WpfUI/Windows/Shop/ShopWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="NetsyGui.Shop.ShopWindow"
+﻿<Window x:Class="Netsy.WpfUI.Windows.Shop.ShopWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:NetsyGui="clr-namespace:NetsyGui"
@@ -6,7 +6,6 @@
     Title="{Binding Shop.Name}" 
     Width="800"
     Height="500"
-    DataContext="{x:Static NetsyGui:Locator.ShopWindowViewModel}">
     <DockPanel>
         <StatusBar DockPanel.Dock="Bottom">
             <StatusBarItem>
