--- a/Netsy.WpfUI/Windows/Main/MainWindow.xaml
+++ b/Netsy.WpfUI/Windows/Main/MainWindow.xaml
@@ -2,13 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:Netsy.WpfUI.Controls"
-    Title="Netsy" Height="400" Width="750">
+    Title="Netsy" Height="500" Width="780">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <TabControl>
-            <TabItem Header="_Front Listings">
+            <TabItem Header="_Front">
                 <Controls:FrontListings  DataContext="{Binding FrontFeaturedListings}" />
             </TabItem>
             <TabItem Header="Listings by _color">
@@ -25,6 +25,9 @@
             </TabItem>
             <TabItem Header="Listings by _tags">
                 <Controls:TagsListings  DataContext="{Binding TagsViewModel}" />
+            </TabItem>
+            <TabItem Header="_Shops by name">
+                <Controls:ShopsByName  DataContext="{Binding ShopsByNameViewModel}" />
             </TabItem>
         </TabControl>
     </Grid>
