--- a/Netsy.WpfUI/Windows/Shop/ShopWindow.xaml
+++ b/Netsy.WpfUI/Windows/Shop/ShopWindow.xaml
@@ -1,11 +1,10 @@
 ﻿<Window x:Class="Netsy.WpfUI.Windows.Shop.ShopWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:NetsyGui="clr-namespace:NetsyGui"
-    xmlns:Controls="clr-namespace:NetsyGui.Controls"
+    xmlns:Controls1="clr-namespace:Netsy.WpfUI.Controls"
     Title="{Binding Shop.Name}" 
     Width="800"
-    Height="500"
+    Height="500">
     <DockPanel>
         <StatusBar DockPanel.Dock="Bottom">
             <StatusBarItem>
@@ -21,7 +20,7 @@
             <TextBlock FontWeight="Bold" Text="{Binding Shop.SaleMessage}" TextWrapping="Wrap"></TextBlock>
             <TextBlock FontWeight="Bold" Text="{Binding Shop.Announcement}" TextWrapping="Wrap"></TextBlock>
             <TextBlock FontWeight="Bold" Text="{Binding Shop.PolicyWelcome}" TextWrapping="Wrap"></TextBlock>
-            <Controls:Listings DataContext="{Binding Listings}" />
+            <Controls1:Listings DataContext="{Binding Listings}" />
         </StackPanel>
     </DockPanel>
 </Window>
