Work towards showing the shop window. Haven't worked out where to attach the command yet though.

--- a/Netsy.WpfUI/Controls/ListingSmall.xaml
+++ b/Netsy.WpfUI/Controls/ListingSmall.xaml
@@ -8,7 +8,7 @@
             <TextBlock DockPanel.Dock="Left" Text="{Binding PriceData}" ></TextBlock>
             <TextBlock DockPanel.Dock="Right" TextAlignment="Right" Text="{Binding Listing.Quantity}" ></TextBlock>
         </DockPanel>
-        <TextBlock><Hyperlink CommandParameter="{Binding}"><TextBlock Text="{Binding Listing.UserName}" /></Hyperlink></TextBlock>
+        <TextBlock><Hyperlink CommandParameter="{Binding Listing}"><TextBlock Text="{Binding Listing.UserName}" /></Hyperlink></TextBlock>
         <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap"></TextBlock>
     </StackPanel>
 </UserControl>
