--- a/Netsy.WpfUI/Windows/Listing/ListingWindow.xaml
+++ b/Netsy.WpfUI/Windows/Listing/ListingWindow.xaml
@@ -1,6 +1,7 @@
-﻿<UserControl x:Class="Netsy.WpfUI.Controls.ListingSmall"
+﻿<Window x:Class="Netsy.WpfUI.Windows.Listing.ListingWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    Title="Listing" Height="300" Width="300">
     <StackPanel Orientation="Vertical" Margin="2,2,2,2">
         <TextBlock FontWeight="Bold" Text="{Binding Listing.Title}" TextWrapping="Wrap"></TextBlock>
         <Image Source="{Binding Listing.ImageUrl155X125}" HorizontalAlignment="Left" Stretch="None"></Image>
@@ -11,4 +12,4 @@
         <TextBlock Visibility="{Binding ShopLinkVisibility}" ><Hyperlink CommandParameter="{Binding Listing}"><TextBlock Text="{Binding Listing.UserName}" /></Hyperlink></TextBlock>
         <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap"></TextBlock>
     </StackPanel>
-</UserControl>
+</Window>
