--- a/Netsy.WpfUI/Windows/Shop/ShopWindow.xaml
+++ b/Netsy.WpfUI/Windows/Shop/ShopWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="Netsy.WpfUI.Windows.Shop.ShopWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Controls1="clr-namespace:Netsy.WpfUI.Controls"
-    Title="{Binding Shop.Name}" 
+    xmlns:Controls="clr-namespace:Netsy.WpfUI.Controls"
+    Title="{Binding ShopData.ShopName}" 
     Width="800"
     Height="500">
     <DockPanel>
@@ -15,12 +15,12 @@
             </StatusBarItem>
         </StatusBar>
         <StackPanel HorizontalAlignment="Stretch">
-            <TextBlock FontWeight="Bold" HorizontalAlignment="Center" Text="{Binding Shop.Title}" TextWrapping="Wrap"></TextBlock>
-            <Image Source="{Binding Shop.BannerImageUrl}" HorizontalAlignment="Center" Stretch="None"></Image>
-            <TextBlock FontWeight="Bold" Text="{Binding Shop.SaleMessage}" TextWrapping="Wrap"></TextBlock>
-            <TextBlock FontWeight="Bold" Text="{Binding Shop.Announcement}" TextWrapping="Wrap"></TextBlock>
-            <TextBlock FontWeight="Bold" Text="{Binding Shop.PolicyWelcome}" TextWrapping="Wrap"></TextBlock>
-            <Controls1:Listings DataContext="{Binding Listings}" />
+            <TextBlock FontWeight="Bold" HorizontalAlignment="Center" Text="{Binding ShopData.Title}" TextWrapping="Wrap"></TextBlock>
+            <Image Source="{Binding ShopData.BannerImageUrl}" HorizontalAlignment="Center" Stretch="None"></Image>
+            <TextBlock FontWeight="Bold" Text="{Binding ShopData.SaleMessage}" TextWrapping="Wrap"></TextBlock>
+            <TextBlock FontWeight="Bold" Text="{Binding ShopData.Announcement}" TextWrapping="Wrap"></TextBlock>
+            <TextBlock FontWeight="Bold" Text="{Binding ShopData.PolicyWelcome}" TextWrapping="Wrap"></TextBlock>
+            <Controls:Listings DataContext="{Binding Listings}" />
         </StackPanel>
     </DockPanel>
 </Window>
