--- a/Netsy.WpfUI/Controls/ShopSmall.xaml
+++ b/Netsy.WpfUI/Controls/ShopSmall.xaml
@@ -2,7 +2,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <StackPanel Orientation="Vertical" Margin="2,2,2,2">
-        <TextBlock FontWeight="Bold" HorizontalAlignment="Center" Text="{Binding Shop.ShopName}" TextWrapping="Wrap"></TextBlock>
+        <TextBlock>
+            <Hyperlink TextDecorations="None" Command="{Binding ShowShopCommand}" CommandParameter="{Binding}">
+                <TextBlock FontWeight="Bold" HorizontalAlignment="Center" Text="{Binding Shop.ShopName}" TextWrapping="Wrap" />
+            </Hyperlink>
+        </TextBlock>
         <TextBlock Text="{Binding Shop.Title}" TextWrapping="Wrap"></TextBlock>
         <Image Source="{Binding Shop.BannerImageUrl}" HorizontalAlignment="Left" Stretch="None"></Image>
         <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap"></TextBlock>
