--- a/Netsy.WpfUI/Windows/Listing/ListingWindow.xaml
+++ b/Netsy.WpfUI/Windows/Listing/ListingWindow.xaml
@@ -1,15 +1,18 @@
 ﻿<Window x:Class="Netsy.WpfUI.Windows.Listing.ListingWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Listing" Height="300" Width="300">
-    <StackPanel Orientation="Vertical" Margin="2,2,2,2">
-        <TextBlock FontWeight="Bold" Text="{Binding Listing.Title}" TextWrapping="Wrap"></TextBlock>
-        <Image Source="{Binding Listing.ImageUrl155X125}" HorizontalAlignment="Left" Stretch="None"></Image>
-        <DockPanel>
-            <TextBlock DockPanel.Dock="Left" Text="{Binding PriceData}" ></TextBlock>
-            <TextBlock DockPanel.Dock="Right" TextAlignment="Right" Text="{Binding Listing.Quantity}" ></TextBlock>
-        </DockPanel>
-        <TextBlock Visibility="{Binding ShopLinkVisibility}" ><Hyperlink CommandParameter="{Binding Listing}"><TextBlock Text="{Binding Listing.UserName}" /></Hyperlink></TextBlock>
-        <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap"></TextBlock>
-    </StackPanel>
+    xmlns:Controls="clr-namespace:Netsy.WpfUI.Controls"
+    Title="Listing" Height="350" Width="400">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Controls:ListingLarge DataContext="{Binding Listing}" />
+        <StatusBar Grid.Row="1">
+                <StatusBarItem>
+                    <Label Content="{Binding StatusText}" />
+                </StatusBarItem>
+            </StatusBar>
+    </Grid>
 </Window>
