--- a/Netsy.WpfUI/Windows/Listing/ListingWindow.xaml
+++ b/Netsy.WpfUI/Windows/Listing/ListingWindow.xaml
@@ -2,7 +2,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:Netsy.WpfUI.Controls"
-    Title="Listing" Height="350" Width="400">
+    Title="Listing"
+    Width="500"
+    SizeToContent="Height">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
