--- a/Netsy.Favorites/MainPage.xaml
+++ b/Netsy.Favorites/MainPage.xaml
@@ -1,9 +1,29 @@
 ﻿<UserControl x:Class="Netsy.Favorites.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:Controls="clr-namespace:Netsy.Favorites.Controls"
     mc:Ignorable="d" d:DesignWidth="640" d:DesignHeight="480">
   <Grid x:Name="LayoutRoot">
-        <TextBlock Text="{Binding ErrorMessage}" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        
+        <TextBlock Grid.Row="0" Text="{Binding ErrorMessage}" />
+        
+        <ListBox 
+                x:Name="listingsListBox"
+                Grid.Row="1"
+                ItemsSource="{Binding Listings}" 
+                ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Controls:ListingSmall />
+                </DataTemplate>
+                </ListBox.ItemTemplate>
+        </ListBox>
   </Grid>
 </UserControl>
