--- a/Netsy.WpfUI/Windows/Main/MainWindow.xaml
+++ b/Netsy.WpfUI/Windows/Main/MainWindow.xaml
@@ -2,14 +2,17 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Controls="clr-namespace:Netsy.WpfUI.Controls"
-    Title="Netsy" Height="500" Width="780">
+    Title="Netsy" Height="500" Width="700">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <TabControl>
-            <TabItem Header="_Front">
+            <TabItem Header="_Front Listings">
                 <Controls:FrontListings  DataContext="{Binding FrontFeaturedListings}" />
+            </TabItem>
+            <TabItem Header="Featured _Shops">
+                <Controls:FeaturedSellers  DataContext="{Binding FeaturedSellersViewModel}" />
             </TabItem>
             <TabItem Header="Listings by _color">
                 <Controls:ColorListings  DataContext="{Binding ColorViewModel}" />
