--- a/Netsy.WpfUI/Windows/Shop/ShopWindow.xaml
+++ b/Netsy.WpfUI/Windows/Shop/ShopWindow.xaml
@@ -8,17 +8,24 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Controls:ShopLarge DataContext="{Binding Shop}" />
-        <Controls:Listings DataContext="{Binding Listings}" Grid.Row="1" />
-        <StatusBar Grid.Row="2">
+        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="1">
+            <Button Content="Get Items" Margin="0,0,1,0" Command="{Binding ShopListingsViewModel.LoadPageCommand}" CommandParameter="{Binding}" />
+            <Button Content="First" Margin="0,0,1,0" Command="{Binding ShopListingsViewModel.FirstPageCommand}" CommandParameter="{Binding}" />
+            <Button Content="Previous" Margin="0,0,1,0" Command="{Binding ShopListingsViewModel.PreviousPageCommand}" CommandParameter="{Binding}" />
+            <Button Content="Next" Margin="0" Command="{Binding ShopListingsViewModel.NextPageCommand}" CommandParameter="{Binding}" />
+        </StackPanel>
+        <Controls:Listings DataContext="{Binding ShopListingsViewModel.Items}" Grid.Row="2" />
+        <StatusBar Grid.Row="3">
             <StatusBarItem>
                 <Label 
                     DockPanel.Dock="Left"
                     VerticalAlignment="Center" 
-                    Content="{Binding StatusText}" />
+                    Content="{Binding ShopListingsViewModel.StatusText}" />
             </StatusBarItem>
         </StatusBar>
     </Grid>
