--- a/Netsy.WpfUI/Controls/ListingLarge.xaml
+++ b/Netsy.WpfUI/Controls/ListingLarge.xaml
@@ -12,6 +12,8 @@
             Price: <TextBlock Text="{Binding PriceData}" />
             Quantity: <TextBlock Text="{Binding Listing.Quantity}" />
             <LineBreak />
+            <Hyperlink Command="{Binding WebLinkClickCommand}" CommandParameter="{Binding Listing.Url}"><TextBlock Text="Web Link" /></Hyperlink>
+            <LineBreak />
             Date: <TextBlock Text="{Binding DateDisplay}" TextWrapping="Wrap"></TextBlock>
             <LineBreak />
             Description: <TextBlock Text="{Binding Listing.Description}" TextWrapping="Wrap"></TextBlock>
