Added unity IoC into Silverlight favorites control

--- a/Silverlight/Netsy.Favorites/FavoritesControl.xaml
+++ b/Silverlight/Netsy.Favorites/FavoritesControl.xaml
@@ -11,7 +11,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         
-        <TextBlock Grid.Row="0" Text="{Binding ErrorMessage}" />
+        <TextBlock Grid.Row="0" Text="{Binding StatusMessage}" />
         
         <ListBox 
                 Grid.Row="1"
