--- a/Silverlight/Netsy.Favorites/Controls/ListingSmall.xaml
+++ b/Silverlight/Netsy.Favorites/Controls/ListingSmall.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="Netsy.Favorites.Controls.ListingSmall"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+    Width="200">
     
     <StackPanel Orientation="Vertical" Margin="2,2,2,2">
         <TextBlock FontWeight="Bold" Text="{Binding Listing.Title}" TextWrapping="Wrap"></TextBlock>
